# ooze

./: .gitignore  Pipfile  README.md  pyproject.toml  run-tests.sh  setup.cfg
.github/workflows/: dev.yml  feature.yml  main.yml  release.yml
docs/: how_injection_works.rst  index.rst  multi-module.rst  ooze_bottle.rst  ooze_configuration_files.rst  ooze_factory.rst  ooze_fastapi.rst  ooze_magic.rst  ooze_os_environment_variables.rst  ooze_pools.rst  ooze_provide.rst  ooze_provide_static.rst  ooze_startup.rst
docs/en/: how_injection_works.rst  index.rst  multi-module.rst  ooze_bottle.rst  ooze_configuration_files.rst  ooze_factory.rst  ooze_fastapi.rst  ooze_magic.rst  ooze_os_environment_variables.rst  ooze_pools.rst  ooze_provide.rst  ooze_provide_static.rst  ooze_startup.rst
examples/: README.md
examples/flask/: counter.py  webapp.py
examples/label-maker/: application_settings.yaml  contacts.txt  label_maker.py  other_contacts.txt
examples/tkinter/: application_settings.yaml  main.py
ooze/: __init__.py  pool.py
tests/: test_ooze.py  test_pool.py
tests/complex_project/: greeter.py  shutdown.py
